--- a/style/excuses.css
+++ b/style/excuses.css
@@ -130,3 +130,19 @@ justify-content: center;
 align-items: center;
 
 }
+
+
+@media (max-width: 480px) {
+
+  .div-generateExcuses {
+
+width: 80vw;
+
+
+  }
+
+
+
+
+
+}
