--- a/style/home.css
+++ b/style/home.css
@@ -52,7 +52,20 @@
     }
 }
 
+.head-dashboardPage{
 
+    display: flex;
+    align-items: center;
+    background-color: rgb(71, 0, 177);
+
+
+
+
+    width: 100vw;;
+    padding: 5px;
+    height: 60px;
+
+}
 
 
 .inp-tarea {
@@ -103,4 +116,76 @@ li.completed {
     width: 100%;
     font-size: 1.3rem;
    
+}
+
+
+@media (max-width: 480px) {
+
+
+.div-leftDashboard{
+    height: 80px;
+    flex-direction: row;
+
+    display: flex;
+    width: 100vw;
+}
+.div-dashboard {
+    overflow: hidden;
+    width: 96vw;
+    margin-left: 8px;
+    height: 800px;
+    border-radius: 10px;
+    border: solid 2px rgb(69, 0, 172);
+    background-color: rgba(0, 0, 0, 0.153);
+
+}
+
+.head-dashboard {
+    display: flex;
+    align-items: center;
+width: 70px;
+    background-color: rgb(71, 0, 177);
+
+
+
+
+ 
+    padding: 5px;
+    height: 60px;
+
+}
+.head-dashboardPage{
+
+    display: flex;
+    align-items: center;
+width: 100%;
+    background-color: rgb(71, 0, 177);
+
+
+
+
+ 
+    padding: 5px;
+    height: 60px;
+
+}
+
+.div-containerBtnI{
+
+display: flex;
+
+}
+
+
+
+.btn-pagesNav{
+
+display: flex;
+width: auto;
+height: 70px;
+align-items: center;
+padding: 0px;
+margin: 0;
+}
+
 }
