--- a/style/home.css
+++ b/style/home.css
@@ -36,7 +36,7 @@
 
 .text-title {
     font-size: 1.5rem;
-  
+    color: orange;
 }
 
 .btn-pagesNav {
@@ -44,12 +44,16 @@
     width: 100%;
     height: 60px;
     padding: 5px;
-    color: white;
+    color: rgb(255, 255, 255);
     margin: 1px;
     border: rgba(255, 255, 255, 0.169) solid 1px;
     &:hover {
         background-color: rgba(0, 78, 142, 0.78);
+color: rgb(0, 255, 0);
     }
+
+
+
 }
 
 .head-dashboardPage{
